making more changes to nightly promote
Signed-off-by: Tom Zhang <tom.yczhang@gmail.com>

--- a/zowe-release-v1-template.json
+++ b/zowe-release-v1-template.json
@@ -16,6 +16,7 @@
     },
 
     "zowe-cli" : {
+        "nightlyFrom" : "libs-snapshot-local",
         "from" : "libs-release-local",
         "to" : "libs-release-local",
         "sourcePath" : "org/zowe/cli",
