--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -54,3 +54,30 @@ jobs:
             core.setFailed('Test workflow ${{ steps.call-test.outputs.workflow-run-num }} is not successful')
         # env:
         #   DEBUG: 'workflow-remote-call-wait'
+    
+  call-release-pipeline:
+    runs-on: ubuntu-latest
+    needs: call-test-pipeline
+    steps:
+      - name: 'Setup jFrog CLI'
+        uses: jfrog/setup-jfrog-cli@v2
+        env:
+          JF_ARTIFACTORY_1: ${{ secrets.JF_ARTIFACTORY_TOKEN }}
+
+      - name: 'Get version of staging branch'
+        run: |
+          echo ZOWE_ART_DIR=$(jfrog rt search \
+          --build="zowe-install-packaging/staging/${{ needs.call-build-pipeline.outputs.build-run-num }}" \
+          "libs-snapshot-local/org/zowe/*/zowe*pax" | jq -r ".[].path" | sed "s#libs-snapshot-local/org/zowe/##g" | cut -f1 -d"/")  >> $GITHUB_ENV
+
+      - name: 'Call release workflow'
+        uses: zowe-actions/shared-actions/workflow-remote-call-wait@main
+        id: call-release
+        with:
+          github-token: ${{ secrets.ZOWE_ROBOT_TOKEN }}
+          owner: zowe
+          repo: zowe-release
+          workflow-filename: release.yml
+          branch-name: main
+          poll-frequency: 1
+          inputs-json-string: '{"zowe-artifact-dir":"${{ env.ZOWE_ART_DIR }}","zowe-build-name":"zowe-install-packaging/staging","zowe-build-number":"${{ needs.call-build-pipeline.outputs.build-run-num }}","zowe-release-version":"nightly"}'
