More on nightly pipeline
Signed-off-by: Tom Zhang <tom.yczhang@gmail.com>

--- a/message/action.yml
+++ b/message/action.yml
@@ -10,6 +10,9 @@ inputs:
   build-num:
     description: zowe build number
     required: true
+outputs:
+  slack-message:
+    description: the message to put into slack
   
 runs:
   using: 'node12'
