--- a/.github/workflows/nightly-v1.yml
+++ b/.github/workflows/nightly-v1.yml
@@ -1,8 +1,8 @@
 name: Zowe Nightly Pipeline for v1
 on:
   schedule:
-    - cron: 15 5 * * *
-    - cron: 44 16 * * *
+    - cron: '15 5 * * *'
+    - cron: '*/5 * * * *'
   workflow_dispatch:
     inputs:
       skip-promote:
