update boolean input type
Signed-off-by: Tom Zhang <tom.yczhang@gmail.com>

--- a/.github/workflows/nightly-v1.yml
+++ b/.github/workflows/nightly-v1.yml
@@ -8,12 +8,12 @@ on:
         description: Skip release?
         type: boolean
         required: false
-        default: 'false'
+        default: false
       skip-test:
         description: Skip test?
         type: boolean
         required: false
-        default: 'false'
+        default: false
 
 env:
   LOCAL_RELEASE_FOLDER: .release
