enable debug mode for workflow remote call
Signed-off-by: Tom Zhang <tom.yczhang@gmail.com>

--- a/.github/workflows/nightly-v1.yml
+++ b/.github/workflows/nightly-v1.yml
@@ -40,6 +40,8 @@ jobs:
           branch-name: staging
           poll-frequency: 3
           inputs-json-string: '{"BUILD_SMPE":"true","BUILD_PSIANDSMPE":"false","BUILD_DOCKER":"true","BUILD_DOCKER_SOURCES":"false","BUILD_KUBERNETES":"true","KEEP_TEMP_PAX_FOLDER":"false"}'
+        env:
+          DEBUG: zowe-actions:shared-actions:workflow-remote-call-wait
 
       - name: '[Build 2] Report build failure if applied'
         if: ${{ steps.call-build.outputs.workflow-run-conclusion != 'success' }}
@@ -138,7 +140,9 @@ jobs:
           branch-name: staging
           poll-frequency: 10
           inputs-json-string: '{"install-test":"Zowe Nightly Tests","custom-zowe-artifactory-pattern-or-build-number":"${{ steps.call-build.outputs.workflow-run-num }}"}'
-
+        env:
+          DEBUG: zowe-actions:shared-actions:workflow-remote-call-wait
+          
       - name: '[Test 2] Report test failure if applied'
         if: ${{ steps.call-test.outputs.workflow-run-conclusion != 'success' && github.event.inputs.skip-test != 'true' }}
         uses: actions/github-script@v5
